@@ -26,11 +26,13 @@
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
 -->
 
-<title>SunSpider JavaScript Benchmark In Progress...</title>
+<title>SunSpider JavaScript Benchmark (In Progress...)</title>
+<link rel="stylesheet" href="sunspider.css"></link>
 </head>
+
 <body onload="next()">
 
-<h2>SunSpider JavaScript Benchmark In Progress...</h2>
+<h2>SunSpider JavaScript Benchmark <small>(In Progress...)</small></h2>
 
 <script src="sunspider-test-prefix.js"></script>
 <script>
@@ -87,7 +89,7 @@ function finish()
 
 </script>
 
-<iframe id="testframe" width="80%" height="500">
+<iframe id="testframe">
 </iframe>
 
 </body>
