@@ -27,7 +27,9 @@
 -->
 
 <title>SunSpider JavaScript Benchmark Results</title>
+<link rel="stylesheet" href="sunspider.css"></link>
 </head>
+
 <body>
 <h2>SunSpider JavaScript Benchmark Results</h2>
 
