@@ -1,0 +1,23 @@
+
+body { font-family: sans-serif;
+       margin: 20px; 
+       background-color: #D9D5A1; 
+       color: #1B0636 }
+
+h2 { background-color: #4E8AB9; 
+     margin: -20px -20px 0px -20px; 
+     padding: 30px 20px 30px 20px; 
+     color: yellow;
+     border-bottom: 2px solid #360D6B }
+
+dt { font-weight: bold }
+
+dd { margin-bottom: 1em; margin-top: 0.5em }
+
+:link { color: #1363A1 }
+:visited { color: #5113A1 }
+
+#testframe { margin-top: 20px;
+	     width: 80%;
+	     height: 500px;
+ 	     border: 2px solid #360D6B }
