@@ -28,12 +28,7 @@
 -->
 
 <title>SunSpider JavaScript Benchmark</title>
-
-<style>
-dt { font-weight: bold; }
-dd { margin-bottom: 1em; margin-top: 0.5em }
-</style>
-
+<link rel="stylesheet" href="sunspider.css"></link>
 </head>
 
 <body>
