@@ -26,7 +26,9 @@
 -->
 
 <title>SunSpider @NAME@</title>
+<link rel="stylesheet" href="sunspider.css"></link>
 </head>
+
 <body>
 <h3>@NAME@</h3>
 <div id="console">
